# rs-crates-template

./: .release-plz.toml  Cargo.toml  rust-toolchain.toml
.github/workflows/: continuous-verification.yaml
scripts/libs/: common.sh
scripts/libs/public/: README.md  command.sh  common.sh  file.sh  log.sh  path.sh  platform.sh  prompt.sh  rust.sh
