[workspace]
members = [
  "crates/*",
]

resolver = "3"

[workspace.package]
authors = []
categories = []
description = ""
edition = "2024"
homepage = ""
keywords = []
license = "MIT"
repository = ""

# Profiles
[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = true
panic = "abort"
strip = "symbols"
